# openeo-slurm

./: .env_sample
openeo_argoworkflows/api/: Dockerfile  pyproject.toml
openeo_argoworkflows/api/openeo_argoworkflows_api/: app.py  jobs.py  tasks.py
openeo_argoworkflows/executor/: Dockerfile  pyproject.toml
openeo_argoworkflows/executor/openeo_argoworkflows_executor/: cli.py  executor.py
openeo_argoworkflows/executor/openeo_argoworkflows_executor/extra_processes/process_implementations/: io.py
